gccida/c3/noce_try_store_flag_inc
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_try_store_flag_inc/src/ifcvt.c:1237:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v2; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_try_store_flag_inc/src/ifcvt.c:1247:10: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
|| ( rtx)if_info->a[1] != const_int_rtx[65] && ( rtx)if_info->a[1] != const_int_rtx[63] 
         ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_try_store_flag_inc/src/ifcvt.c:1247:54: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
|| ( rtx)if_info->a[1] != const_int_rtx[65] && ( rtx)if_info->a[1] != const_int_rtx[63] 
                                                     ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_try_store_flag_inc/src/ifcvt.c:1269:21: error: use of undeclared identifier 'machine_mode'
v1 = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)if_info->x)); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_try_store_flag_inc/src/ifcvt.c:1269:36: error: expected expression
v1 = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)if_info->x)); 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_try_store_flag_inc/src/ifcvt.c:1277:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)if_info->x), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_try_store_flag_inc/src/ifcvt.c:1277:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)if_info->x), 
                 ^
7 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_try_store_flag_inc/src/obj/ifcvt.o] Error 1
